# SPM-RF-Project

./: .gitignore  CMakeLists.txt  LICENSE  README.md  benchmark.sh  makefile  weak_scaling.sh  weak_scaling_mpi.sh
include/: CSVLoader.hpp  DatasetHelper.hpp  DecisionTree.hpp  DecisionTreeIndexed.hpp  DecisionTreeO.hpp  FFNodes.hpp  Node.hpp  RandomForest.hpp  RandomForestIndexed.hpp  RandomForestNaive.hpp  RandomForestO.hpp  TrainTestSplit.hpp
src/Common/: DecisionTree.cpp  RandomForest.cpp  main.cpp
src/FF/: DecisionTree.cpp  RandomForest.cpp  main.cpp
src/Indexed/: DecisionTree.cpp  RandomForest.cpp  main.cpp
src/MPI/: RandomForest.cpp  main.cpp
src/Naive/: DecisionTree.cpp  RandomForest.cpp  main.cpp
src/OMP/: DecisionTree.cpp  RandomForest.cpp  main.cpp
src/Optimized/: DecisionTree.cpp  RandomForest.cpp  main.cpp
src/Seq/: DecisionTree.cpp  RandomForest.cpp  main.cpp
test/: CovertypeToCvs.cpp
